# cloud-rush

./: .gitignore  README.md  cloudrush.sql  package.json  pnpm-lock.yaml  product_backlog.csv
backend/: Dockerfile  README.md  add_car_rental_indexes.sql  add_refund_tables.sql  add_revenue_prediction_tables.sql  demo_factory.py  docker-compose.override.yml  docker-compose.yaml  pyproject.toml  seed.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: auth.py  config.py  database.py  oauth.py
backend/app/factories/: __init__.py  car_rental_factory.py  factory_initializer.py  hotel_factory.py  package_factory.py  service_factory.py
backend/app/models/: __init__.py  airplane.py  airport.py  booking.py  car_rental.py  flight.py  flight_model.py  forecase.py  forecast.py  hotel.py  package.py  passenger.py  pet_model.py  place.py  refund.py  role_request.py  trip.py  user.py  user_model.py
backend/app/repositories/: aiport_repository.py  airplane_repository.py  booking_repository.py  booking_service_repository.py  car_rental_repository.py  emergency_contact_repository.py  explore_repository.py  flight_repository.py  flight_seat_repository.py  hotel_repository.py  package_repository.py  passenger_repository.py  payment_repository.py  pet_repo.py  place_repository.py  refund_repository.py  revenue_forecast_repository.py  role_repository.py  seat_repository.py  service_repository.py  trip_activity_repository.py  trip_plan_repository.py  trip_repository.py  user_repository.py
backend/app/routers/: airplane_router.py  airport_router.py  auth.py  pet.py  (+20 more)
(+259 files in other folders)
