[project]
name = "backend"
version = "0.1.0"
description = "fastapi backend for cloudrush"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "itsdangerous>=2.1.2",
    "python-dotenv>=1.0.0",
    "starlette>=0.48.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "fastapi-auth0>=0.5.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
    "pyjwt[crypto]>=2.1.0",
]
